; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_abx500.c_abx500_temp_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_abx500.c_abx500_temp_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.abx500_temp = type { i32, i32 }

@abx500_temp_group = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @abx500_temp_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @abx500_temp_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.abx500_temp*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.abx500_temp* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.abx500_temp* %5, %struct.abx500_temp** %3, align 8
  %6 = load %struct.abx500_temp*, %struct.abx500_temp** %3, align 8
  %7 = getelementptr inbounds %struct.abx500_temp, %struct.abx500_temp* %6, i32 0, i32 1
  %8 = call i32 @cancel_delayed_work_sync(i32* %7)
  %9 = load %struct.abx500_temp*, %struct.abx500_temp** %3, align 8
  %10 = getelementptr inbounds %struct.abx500_temp, %struct.abx500_temp* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @hwmon_device_unregister(i32 %11)
  %13 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %14 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @sysfs_remove_group(i32* %15, i32* @abx500_temp_group)
  ret i32 0
}

declare dso_local %struct.abx500_temp* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @hwmon_device_unregister(i32) #1

declare dso_local i32 @sysfs_remove_group(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
